--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -97,6 +97,24 @@ layout: page
     </div>
     {% endif %}
 
+    <div id="page-category">
+      <h1 class="pl-lg-2">
+        <i class="far fa-folder-open fa-fw text-muted"></i>
+        {{ page.title }}
+        <span class="lead text-muted pl-2">{{ page.posts | size }}</span>
+      </h1>
+
+      <ul class="post-content pl-0">
+        {% for post in page.posts %}
+        <li class="d-flex justify-content-between pl-md-3 pr-md-3">
+          <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+          <span class="dash flex-grow-1"></span>
+          <span class="text-muted small">{{ post.date | date: site.data.date_format.post.long }}</span>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+
   </div> <!-- .card -->
 
     {% assign group_index = group_index | plus: 1 %}
