--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -16,32 +16,98 @@ layout: page
 
 {% assign sort_categories = site.categories | sort %}
 
-{% for category in sort_categories %}
-  {% assign category_name = category | first %}
-  {% assign posts_of_category = category | last %}
-  {% assign first_post = posts_of_category | first %}
+{% for category in sort_categories %} <!-- 对一级目录遍历 -->
+  {% assign category_name = category | first %} <!-- 一级目录名字 -->
+  {% assign posts_of_category = category | last %} <!-- 一级目录下的文章 -->
+  {% assign first_post = posts_of_category | first %} <!-- 第一篇文章 -->
 
-  {% if category_name == first_post.categories[0] %}
-    {% assign sub_categories = "" | split: "" %}
+  {% if category_name == first_post.categories[0] %} <!-- 如果这个目录第是一篇文章的一级目录 -->
+    {% assign sub_categories = "" | split: "" %} <!--  -->
 
-    {% for post in posts_of_category %}
-      {% assign second_category = post.categories[1] %}
-      {% if second_category %}
+    {% for post in posts_of_category %}  <!-- 对每个一级目录下的文章 -->
+      {% assign second_category = post.categories[1] %}  <!-- 记录其二级目录名称 -->
+      {% if second_category %} <!-- 如果有二级目录 -->
         {% unless sub_categories contains second_category %}
-          {% assign sub_categories = sub_categories | push: second_category %}
+          {% assign sub_categories = sub_categories | push: second_category %} <!-- 记录二级目录 -->
         {% endunless %}
       {% endif %}
-      <li class="d-flex justify-content-between pl-md-3 pr-md-3">
-        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-        <span class="dash flex-grow-1"></span>
-        <span class="text-muted small">{{ post.date | date: site.data.date_format.post.long }}</span>
-      </li>
     {% endfor %}
 
-    {% assign sub_categories = sub_categories | sort %}
-    {% assign sub_categories_size = sub_categories | size %}
+    {% assign sub_categories = sub_categories | sort %} <!-- 二级目录排序 -->
+    {% assign sub_categories_size = sub_categories | size %} <!-- 二级目录文章数量 -->
 
-    
+  <div class="card categories">
+    <!-- top-category -->
+    <div class="card-header d-flex justify-content-between hide-border-bottom"
+        id="{{ HEAD_PREFIX }}{{ group_index }}">
+      <span>
+      {% if sub_categories_size > 0 %}
+        <i class="far fa-folder-open fa-fw"></i>
+      {% else %}
+        <i class="far fa-folder fa-fw"></i>
+      {% endif %}
+        <a class="ml-1 mr-2">
+          {{ category_name }}
+        </a>
+
+        <!-- content count -->
+        {% assign top_posts_size = site.categories[category_name] | size %}
+        <span class="text-muted small font-weight-light">
+          {% if sub_categories_size > 0 %}
+            {{ sub_categories_size }}
+            {% if sub_categories_size > 1 %}categories{% else %}category{% endif %},
+          {% endif %}
+            {{ top_posts_size }}
+            post{% if top_posts_size > 1 %}s{% endif %}
+        </span>
+      </span>
+
+      <!-- arrow -->
+      {% if sub_categories_size > 0%}
+      <a href="#{{ LIST_PREFIX }}{{ group_index }}" data-toggle="collapse"
+        aria-expanded="true" aria-label="{{ HEAD_PREFIX }}{{ group_index }}-trigger"
+        class="category-trigger hide-border-bottom">
+        <i class="fas fa-fw fa-angle-down"></i>
+      </a>
+      {% else %}
+      <span data-toggle="collapse" class="category-trigger hide-border-bottom disabled">
+        <i class="fas fa-fw fa-angle-right"></i>
+      </span>
+      {% endif %}
+
+    </div> <!-- .card-header -->
+
+    <!-- Sub-categories -->
+    {% if sub_categories_size > 0 %}
+    <div id="{{ LIST_PREFIX }}{{ group_index }}" class="collapse show" aria-expanded="true">
+      <ul class="list-group pl-0">
+        {% for sub_category in sub_categories %}
+        <li class="list-group-item">
+          <i class="far fa-folder fa-fw"></i>
+          <a class="ml-1 mr-2">{{ sub_category }}</a>
+          {% assign posts_size = site.categories[sub_category] | size %}
+          <span class="text-muted small font-weight-light">{{ posts_size }}
+            post{% if posts_size > 1 %}s{% endif %}
+          </span>
+        </li>
+          {% for post in posts_of_category %}
+            {% assign second_category = post.categories[1] %}  <!-- 记录其二级目录名称 -->
+            {% if second_category %} <!-- 如果有二级目录 -->
+              {% if second_category == sub_category %} <!-- 如果有二级目录 -->
+                <li class="d-flex justify-content-between pl-md-5 pr-md-3">
+                  <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+                  <span class="dash flex-grow-1"></span>
+                  <span class="text-muted small">{{ post.date | date: site.data.date_format.post.long }}</span>
+                </li>
+              {% endif %}
+            {% endif %}            
+          {% endfor %}
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
+
+  </div> <!-- .card -->
 
     {% assign group_index = group_index | plus: 1 %}
 
