--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,7 +73,7 @@
   MathJax.Hub.Config({
     tex2jax: {
       inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      processEscapes: true
+      processEscapes: false
     }
   });
 </script>
