--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -94,7 +94,7 @@ layout: page
             {% assign second_category = post.categories[1] %}  <!-- 记录其二级目录名称 -->
             {% if second_category %} <!-- 如果有二级目录 -->
               {% if second_category == sub_category %} <!-- 如果有二级目录 -->
-                <li class="d-flex justify-content-between pl-md-5 pr-md-3">
+                <li class="d-flex justify-content-between pl-md-5 pr-md-3 pt-md-2 pb-md-2">
                   <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
                   <span class="dash flex-grow-1"></span>
                   <span class="text-muted small">{{ post.date | date: site.data.date_format.post.long }}</span>
